[package]
name = "jppost_ken_all_arrangement"
version = "0.1.0"
authors = ["ypc2e55orj <43885603+ypc2e55orj@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
csv = "1.1"
serde = "1.0.104"
serde_derive = "1.0.104"
mysql = "17.0.0"
toml = "0.5.6"
